--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>An awesome blog</h1>
     <div class="blog-post">
       <h2>An awesome blog post</h2>
+      <img src="images/window.png" alt="" />
       <p>
         At vero eos et <a href="#">accusam et justo duo</a> dolores et ea rebum.
         Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor
